RESOLVED FIXED 258548
AX: aria-required is not ignored if equivalent HTML attribute is present
https://bugs.webkit.org/show_bug.cgi?id=258548
Summary AX: aria-required is not ignored if equivalent HTML attribute is present
Hunseop Jeong
Reported 2023-06-26 21:36:12 PDT
If the equivalent HTML attribute is present, ARIA attribute should be ignored as defined in the standard(see https://www.w3.org/TR/wai-aria-1.2/#usage and https://www.w3.org/TR/core-aam-1.2/#mapping_conflicts: "When a host language declares a WAI-ARIA attribute to be in direct semantic conflict with a native attribute for a given element, user agents MUST ignore the WAI-ARIA attribute and instead use the host language attribute with the same implicit semantic.") Spec https://www.w3.org/TR/html-aam-1.0/#att-required, 'If the element includes both the required attribute and the aria-required attribute with a valid value, User Agents MUST expose only the required attribute value.' Example code: <input type="text" required aria-required="false"> How to check the value: Inspector -> Elements -> Node -> Accessibility -> Required Expected: Required is Yes Actual: Required is No
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-26 21:36:24 PDT
Hunseop Jeong
Comment 2 2023-06-26 22:39:48 PDT
EWS
Comment 3 2023-06-27 09:26:11 PDT
Committed 265552@main (640ead36a4ac): <https://commits.webkit.org/265552@main> Reviewed commits have been landed. Closing PR #15317 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.