AX: Ignore the aria-required if equivalent HTML attribute is present https://bugs.webkit.org/show_bug.cgi?id=258548 rdar://problem/111370591

Reviewed by Tyler Wilcock.

Modify to prioritize the HTML attribute when both `aria-required` and
`required` attribute are present.

* LayoutTests/accessibility/aria-required-expected.txt:
* LayoutTests/accessibility/aria-required.html:
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::isRequired const):

Canonical link: https://commits.webkit.org/265552@main